fix(i18n): Update order label in English and Vietnamese translations to clarify "Orders" as "Orders Database" and "Cơ sở dữ liệu đơn hàng"

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -76,7 +76,7 @@
     "unavailability": "Set Unavailability",
     "communication": "Communication",
     "notifications": "Notifications",
-    "orders": "Orders"
+    "orders": "Orders Database"
   },
   "admin": {
     "employees": "Employees",
