--- a/frontend/src/i18n/vi.json
+++ b/frontend/src/i18n/vi.json
@@ -76,7 +76,7 @@
     "unavailability": "Đặt thời gian không làm việc",
     "communication": "Giao tiếp",
     "notifications": "Thông báo",
-    "orders": "Đơn hàng"
+    "orders": "Cơ sở dữ liệu đơn hàng"
   },
   "admin": {
     "employees": "Nhân viên",
