feat(`i18n`): Add theme and language labels to English and Vietnamese translations

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -104,6 +104,8 @@
     "language": {
       "english": "English",
       "vietnamese": "Vietnamese"
-    }
+    },
+    "theme": "Theme",
+    "language": "Language"
   }
 }
