--- a/frontend/src/i18n/vi.json
+++ b/frontend/src/i18n/vi.json
@@ -104,6 +104,8 @@
     "language": {
       "english": "Tiếng Anh",
       "vietnamese": "Tiếng Việt"
-    }
+    },
+    "theme": "Giao diện",
+    "language": "Ngôn ngữ"
   }
 } 
