--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -106,6 +106,11 @@
       "vietnamese": "Vietnamese"
     },
     "theme": "Theme",
-    "language": "Language"
+    "language": "Language",
+    "theme.light": "Light",
+    "theme.dark": "Dark",
+    "theme.system": "System",
+    "language.english": "English",
+    "language.vietnamese": "Vietnamese"
   }
 }
