--- a/frontend/src/i18n/vi.json
+++ b/frontend/src/i18n/vi.json
@@ -106,6 +106,11 @@
       "vietnamese": "Tiếng Việt"
     },
     "theme": "Giao diện",
-    "language": "Ngôn ngữ"
+    "language": "Ngôn ngữ",
+    "theme.light": "Sáng",
+    "theme.dark": "Tối",
+    "theme.system": "Hệ thống",
+    "language.english": "Tiếng Anh",
+    "language.vietnamese": "Tiếng Việt"
   }
 } 
