fix(`i18n`): Fix conflict keys for theme and language translations

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -105,8 +105,8 @@
       "english": "English",
       "vietnamese": "Vietnamese"
     },
-    "theme": "Theme",
-    "language": "Language",
+    "Theme": "Theme",
+    "Language": "Language",
     "theme.light": "Light",
     "theme.dark": "Dark",
     "theme.system": "System",
